optimized SecurityConfig